remove pulse gradient

--- a/Glasscord.css
+++ b/Glasscord.css
@@ -3454,3 +3454,7 @@ svg.icon_a22cb0 {
 .container__3f21e {
     box-shadow: var(--glass-shadow);
 }
+
+.pulseGradient__11664 {
+    display: none;
+}
