--- a/Glasscord.css
+++ b/Glasscord.css
@@ -3604,3 +3604,7 @@ img.thumbnail__0f2e8 {
 .childWrapperNoHoverBg__6e9f8 {
     box-shadow: var(--glass-shadow);
 }
+
+.icon_a629d4 {
+    border-radius: 10px;
+}
