--- a/Glasscord.css
+++ b/Glasscord.css
@@ -3800,3 +3800,7 @@ button.close_e50a4d.close__49fc1.button__201d5.lookBlank__201d5.colorBrand__201d
 .overlay-secondary_a22cb0:hover {
     background-color: #ffffff24;
 }
+
+.activitySectionAssets__00943 .largeImage__00943 {
+    border-radius: 10px;
+}
